# r-tool

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: release.yml
installer/windows/: R-Tool.iss
scripts/: package_macos.sh
src/: Parameters.cpp  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  UserSettings.cpp  UserSettings.h
src/dsp/: ToolProcessor.cpp  ToolProcessor.h
src/gui/: MeterComponent.cpp  MeterComponent.h
